test_regress/t/t_inst_array_bad.out
%Error: t/t_inst_array_bad.v:19:28: Input port connection 'onebit' as part of a module instance array requires 1 or 8 bits, but connection's VARREF 'onebitbad' generates 9 bits.
                                  : ... In instance t
   sub sub [7:0] (allbits, onebitbad, bitout);
                           ^~~~~~~~~
%Error: Exiting due to
